--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,15 +8,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.20.3
 
       - name: Setup Node.js v16.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: "16.x"
+          cache: "pnpm"
 
       - name: Install
-        run: npm install # 安装依赖
+        run: pnpm install # 安装依赖
 
       - name: Build
         run: npm run build # 打包
