fix(compile): change roo dir

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pure-admin-thin",
+  "name": "vue-pure-admin",
   "version": "3.9.7",
   "private": true,
   "homepage": "https://GentlyJian.github.io/vue-pure-admin",
